[project]
name = "webx"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.8",
    "pydantic>=2.11.7",
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "asyncio>=3.4.3",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "orjson>=3.11.2",
    "fake-useragent>=2.2.0",
    "aiohttp>=3.12.15",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "psutil>=7.0.0",
]
