[project]
name = "webx"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "fastapi-cli>=0.0.13",
    "pydantic>=2.11.9",
    "typer>=0.19.2",
    "httpx>=0.24.0",
    "asyncio>=3.4.3",
    "trafilatura>=2.0.0",
    "uvicorn>=0.37.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "orjson>=3.11.3",
    "fake-useragent>=2.2.0",
    "aiohttp>=3.12.15",
    "tenacity>=9.1.2",
    "tldextract>=5.3.0",
]

[dependency-groups]
dev = [
    "psutil>=7.1.0",
    "ty>=0.0.1a18",
]